<resources>
    <string name="app_name">app_android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">back button</string>
    <string name="mail">Mail</string>
    <string name="all_button">All</string>
    <string name="notice_button">Notice</string>
    <string name="promo_button">Promo</string>
    <string name="event_button">Event</string>

</resources>