<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingHorizontal="26dp"

    >
   <com.bank.app_android.ui.components.CustomAppBar
       app:title="@string/mail"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/mail_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            >

            <Button
                android:id="@+id/allButton"
                android:layout_width="70dp"
                android:layout_height="26dp"
                android:background="@drawable/button_gradient"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/all_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/noticeButton"
                app:layout_constraintHorizontal_chainStyle="spread_inside"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,DuplicateClickableBoundsCheck" />

            <Button

                android:id="@+id/noticeButton"
                android:layout_width="70dp"
                android:layout_height="26dp"
                android:background="@drawable/button_outilined"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/notice_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/promoButton"
                app:layout_constraintStart_toEndOf="@+id/allButton"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/promoButton"
                android:layout_width="70dp"
                android:layout_height="26dp"
                android:background="@drawable/button_outilined"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/promo_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/eventButton"
                app:layout_constraintStart_toEndOf="@+id/noticeButton"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/eventButton"
                android:layout_width="70dp"
                android:layout_height="26dp"
                android:background="@drawable/button_outilined"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/event_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/promoButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                tools:ignore="TouchTargetSizeCheck" />



        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/mail_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:listitem="@layout/mail_card"
        app:layoutManager="LinearLayoutManager"
        />



</LinearLayout>